Added github workflow.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=development jest --testTimeout=10000",
+    "test": "NODE_ENV=test jest --testTimeout=10000",
     "start": "node index.js"
   },
   "author": "",
