--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -29,7 +29,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [17.x]
 
     steps:
     - name: checkout
@@ -38,5 +38,5 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn
-    - run: yarn test
+    - run: npm
+    - run: npm test
